{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 12,
  "lineage": "091185be-ec52-4d1c-9fbe-2b87c91cab41",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbserver-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ecc100363951e6a",
            "arn": "arn:aws:ec2:eu-central-1:828462330928:instance/i-08f2c63889685ab64",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f2c63889685ab64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "packer-proba",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d283fbf8f85baa0a",
            "private_dns": "ip-172-31-46-30.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.30",
            "public_dns": "ec2-3-64-55-85.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.64.55.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a8562adb54b7d300",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20230615192428250800000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08be71f32d8cfc970",
            "tags": {
              "CreatedBy": "aleksandra.ljuboje",
              "IaC": "Terraform",
              "Name": "task-12-dbserver-tf",
              "Project": "task-12"
            },
            "tags_all": {
              "CreatedBy": "aleksandra.ljuboje",
              "IaC": "Terraform",
              "Name": "task-12-dbserver-tf",
              "Project": "task-12"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0465751a4ca68bb91"
            ]
          },
          "dependencies": [
            "aws_security_group.database-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ecc100363951e6a",
            "arn": "arn:aws:ec2:eu-central-1:828462330928:instance/i-0276cb87f81cf9007",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0276cb87f81cf9007",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "packer-proba",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed93c999abb4a592",
            "private_dns": "ip-172-31-40-54.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.54",
            "public_dns": "ec2-35-159-46-220.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.159.46.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb960709e64a930f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20230615192428251200000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08be71f32d8cfc970",
            "tags": {
              "CreatedBy": "aleksandra.ljuboje",
              "IaC": "Terraform",
              "Name": "task-12-webserver-tf",
              "Project": "task-12"
            },
            "tags_all": {
              "CreatedBy": "aleksandra.ljuboje",
              "IaC": "Terraform",
              "Name": "task-12-webserver-tf",
              "Project": "task-12"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ebbca543a8ad3d60"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:828462330928:security-group/sg-0465751a4ca68bb91",
            "description": "Security group for MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0465751a4ca68bb91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230615192428250800000001",
            "name_prefix": "terraform-",
            "owner_id": "828462330928",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "aleksandra.ljuboje",
              "IaC": "Terraform",
              "Name": "task-12-sg-dbserver-tf",
              "Project": "task-12"
            },
            "tags_all": {
              "CreatedBy": "aleksandra.ljuboje",
              "IaC": "Terraform",
              "Name": "task-12-sg-dbserver-tf",
              "Project": "task-12"
            },
            "timeouts": null,
            "vpc_id": "vpc-015cca5ab1101860d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:828462330928:security-group/sg-0ebbca543a8ad3d60",
            "description": "Allow SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebbca543a8ad3d60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230615192428251200000002",
            "name_prefix": "terraform-",
            "owner_id": "828462330928",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "aleksandra.ljuboje",
              "IaC": "Terraform",
              "Name": "task-12-sg-webserver-tf",
              "Project": "task-12"
            },
            "tags_all": {
              "CreatedBy": "aleksandra.ljuboje",
              "IaC": "Terraform",
              "Name": "task-12-sg-webserver-tf",
              "Project": "task-12"
            },
            "timeouts": null,
            "vpc_id": "vpc-015cca5ab1101860d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}